--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,66 @@
 <!--pages/home/home.wxml-->
-<text class="title">Hello world</text>
+<!-- <text class="title">Hello world</text>
+<button size="mini">按钮</button> -->
+
+<!-- text组件 -->
+<!-- 1.text组件基本使用 -->
+<text>Hello World\n</text>
+<text>你好小程序\n</text>
+
+<!-- 2.selectable={{true}} -->
+<!-- 默认情况下text文本长按时不能选中的,设置selectable={{true}}或者selectable就为可以选中 -->
+<text selectable="{{true}}">Hello zjl</text>
+<text selectable>Hello zjl\n</text>
+
+<!-- 3.space：决定文本空格大小 -->
+<text>Hello World\n</text>
+<!-- 默认值 -->
+<text space="nbsp">Hello World\n</text>
+<!-- 中文字符大小空格 -->
+<text space="emsp">Hello World\n</text>
+<!-- 半个中文字体大小 -->
+<text space="ensp">Hello World\n</text>
+
+
+<!-- 4.decode属性：是否解码文本 -->
+<!-- 是否对文中特殊字符进行解码 -->
+<text decode>5 &gt; 3</text>
+
+<!-- button组件 -->
+<!-- 1.button的基本使用 -->
+<button>按钮</button>
+
+<!-- 2.size属性，行内块级元素 -->
 <button size="mini">按钮</button>
+<button size="mini">按钮</button>
+
+<!-- 3.type属性,改变按钮颜色 -->
+<button size="mini" type="primary">按钮</button>
+<button size="mini" type="default">按钮</button>
+<button size="mini" type="warn">按钮</button>
+
+<!-- 4.plain:镂空效果 -->
+<button size="mini" plain>按钮</button>
+
+<!-- 5.disable：不可用 -->
+<button size="mini" disabled>按钮</button>
+
+<!-- 6.loading:加载,可以通过mustache控制true/false -->
+<button size="mini" loading>按钮</button>
+
+<!-- 7.hover-class：点击时的属性 -->
+<button hover-class="pressed">按钮</button>
+
+<!-- view视图容器组件 -->
+<!-- 1.view的基本使用：view为块级元素 -->
+<view class=".box">哈哈哈</view>
+<view>呵呵呵呵</view>
+
+<!-- 2.hover-class:当用户按下组件的时候，实现的的样式 -->
+<!-- hover-stay-time:按下状态保持多久，hover-start-time：多久出现按下状态 -->
+<view hover-class="hover-view" class="box1" hover-stay-time="0" hover-start-time="0">box1</view>
+
+<!-- 3.指定是否阻止本节点的祖先节点出现点击态 -->
+<view class="box2" hover-class="hover-view2" hover-stay-time="0" hover-start-time="0">
+  <view hover-class="hover-view" class="box1" hover-stay-time="0" hover-start-time="0" hover-stop-propagation>box1</view>
+</view>
