--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -3,3 +3,24 @@
     color: red;
     font-size: 30px;
   }
+  .container{
+    background-color: green;
+    white-space: nowrap;
+  }
+  .item{
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    margin: 10px;
+    display: inline-block;
+  }
+  .container2{
+    margin-top: 30px;
+    background-color: red;
+    height: 300px;
+  }
+  .item2{
+    height: 100px;
+    background-color:blue;
+    margin: 10px;
+  }
