--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,5 +1,13 @@
 /* pages/home/home.wxss */
-  .title{
-    color: red;
-    font-size: 30px;
-  }
+.title{
+  color: red;
+}
+.red{
+  color: red;
+}
+.green{
+  color: green;
+}
+.blue{
+  color: blue;
+}
