--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,24 @@
 <!--pages/home/home.wxml-->
-<text class="title">Hello world</text>
-<button size="mini">按钮</button>
+<!-- 1.插槽的使用 -->
+<my-slot>
+  <button size="mini">我是插入的按钮</button>
+</my-slot>
+
+<my-slot>
+  <text>哈哈哈哈</text>
+</my-slot>
+
+<my-slot>
+  <image src="../../assets/images/home/recommend_bg.jpg"></image>
+</my-slot>
+
+
+<!-- 2.多个插槽的使用 -->
+<!-- 注意事项：
+        1.给每一个插槽取一个名字：name插槽
+        2.必须在components对象中添加一个options（multipleSlots） -->
+<my-mslot>
+  <button size="mini" slot="slot2">我是插入的按钮</button>
+  <slider slot="slot1"></slider>
+  <text slot="slot3">哈哈哈</text>
+</my-mslot>
