--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,7 @@
 <!--pages/home/home.wxml-->
 <text class="title">Hello world</text>
 <button size="mini">按钮</button>
+
+
+<!-- 分享按钮 -->
+<button size="mini" open-type="share">分享</button>
