--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,32 @@
 <!--pages/home/home.wxml-->
-<text class="title">Hello world</text>
-<button size="mini">按钮</button>
+
+<!-- 1.navigator页面跳转 -->
+<navigator url="/pages/detail/detail">跳转到详情页</navigator>
+
+<!-- 2.navigator属性：open-type -->
+<!-- redirect:关闭当前页面 -->
+<navigator url="/pages/detail/detail"
+           open-type="redirect">
+跳转到详情页（redirect）
+</navigator>
+
+<!-- switchTab:跳转到tabBar页面 -->
+<navigator url="/pages/about/about"
+           open-type="switchTab">
+跳转到详情页（switchTab）
+</navigator>
+
+<!-- reLaunch:关闭所有页面，只显示指定页面 -->
+<navigator url="/pages/about/about"
+           open-type="reLaunch">
+跳转到详情页（reLaunch）
+</navigator>
+
+<!-- 3.跳转过程中数据的传递 -->
+<navigator url="/pages/detail/detail?name=why&age=18&height=1.88">页面跳转传递数据</navigator>
+{{titles}}
+
+<!-- 4.通过API进行进行页面跳转 -->
+<button size="mini" bindtap="handlepushDetail">跳转到详情页</button>
+
+
