--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,2 +1,5 @@
 <!--pages/profile/profile.wxml-->
 <text>pages/profile/profile.wxml</text>
+
+<!-- delta直接退回两个层级 -->
+<navigator open-type="navigateBack" delta="2">返回</navigator>
